Fix: z-index al header para evitar que se superpongan los videos (#21633)

--- a/src/websites/elcomercio/scss/lite-components/features/header/basic/_h-basic.scss
+++ b/src/websites/elcomercio/scss/lite-components/features/header/basic/_h-basic.scss
@@ -4,6 +4,7 @@
   align-items: center;
   height: 48px;
   padding: 0 16px;
+  z-index: 99999;
 
   &__btn {
     padding: 0;
